[package]
name = "genome"
version = "0.1.0"
authors = ["Felix Suchert <dev@felixsuchert.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.2"
rand = "0.7"
clap = { version = "2.32", optional = true }
time = { version = "0.1", optional = true }
cpu-time = { version = "1.0", optional = true }

# my own patched version of stm
stm = { git = "https://github.com/feliix42/rust-stm", rev = "c0f823d3b4dfbf33c483a1785148404bd2a27c6d", optional = true }
stm-datastructures = { git = "https://github.com/feliix42/stm-datastructures", optional = true }

itertools = "0.10"
jemallocator = "0.5.0"

[features]
cli = ["time", "clap", "cpu-time"]
transactional = ["stm", "stm-datastructures"]
verify = []

[[bin]]
name = "sequential"
path = "src/bin/seq.rs"
required-features = ["cli"]

[[bin]]
name = "stm"
path = "src/bin/stm.rs"
required-features = ["transactional", "cli"]
